Fix broken test by wrapping it in act().

--- a/src/assets/scss/screens/_data-vault.scss
+++ b/src/assets/scss/screens/_data-vault.scss
@@ -16,6 +16,10 @@
       width: 100%
     }
 
+    .submitColumn {
+      text-align: right;
+    }
+
     .submit {
       margin-top: 33px;
     }
